// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row> hook:styler 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      Object {
        "marginBottom": 16,
      },
      undefined,
    ]
  }
/>
`;

exports[`<Row> renders 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Row> when {align} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "flex-start",
      },
      Object {
        "justifyContent": "flex-start",
      },
      undefined,
      undefined,
    ]
  }
/>
`;

exports[`<Row> when {justify} 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "height": "auto",
        "width": "100%",
      },
      Object {
        "alignItems": "center",
      },
      Object {
        "justifyContent": "center",
      },
      undefined,
      undefined,
    ]
  }
/>
`;
